-------------------------------------------
Changes in version 1.2 (???? 2006)

- Fixed many OpenGL render state problems which were related to wrong texture states. The textures are now enabled and disabled by the material renderers in OnSetMaterial. Also enabled the texture state cache which helps preventing texture changes just as the one for D3Dx. Thanks to hey_i_am_real for some good hints on where the problem was located. 

- Added compile flag _IRR_COMPILE_WITH_X11_ which is by default enabled. Disabling the flag removes all X11 dependencies from Irrlicht and allows for a headless Linux Irrlicht server - added by request :-)

- Win32 OpenGL driver tries to use the requested bpp size.

- Default texture format is now A8R8G8B8 if not explicitly specified. This fixes some color artifacts with lightmaps. Bugfix submitted by hey_i_am_real.

- In OnPostRender all transformations were taken as relative and multiplied with the root transformation matrix every time due to a wrong check for the real root node. This shoudl increase render performance for scenes with lots of (invisible) nodes.

- Added correct list copy constructor.

- Color selection dialog added.

- New GUI skin "Burning Skin".

- GUIStatic text is correctly grayed out if disabled.

- API change: The OnEvent method must be changed to OnEvent(const SEvent&) to correctly implement the interfaces again.

- Added getHeight method for terrain node submitted by Spintz. It calculates the height from the base mesh instead of requiring ray casts and collision detection and is much faster.

- New methods core::lerp to linearly interpolate two floats and SColor.getLuminance to calculate luminance of RGB color.

- Multisampling with OpenGL under Linux added

- MAJOR API CHANGE: